[package]
edition = "2021"
name = "orangegpio"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
memmap = "0.7.0"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.0", default-features = false, features = ["async","napi4"] }
napi-derive = "2.12.2"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
